# rscoursework

./: README.md  cli.py  data.py  docker-compose.yaml  domain.py  filter.py  lab3.ipynb  main.py  measure.py  recomendation_system.py
recomendation_service/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
recomendation_service/src/: __init__.py
recomendation_service/src/api/: recomendation_service.py
recomendation_service/src/domain/: commands.py  conversation_context.py  executable_command.py  icommand_constructor.py  icommand_response.py  irec_system_command_executor.py  measured_command.py  picture.py  rec_system_command_base.py  user.py
recomendation_service/src/nlp/: edit_distance_tools.py  icommand_dispatcher.py  nlp_cli.py  nlprocessor.py  preprocessing.py
recomendation_service/src/nlp/nltk/: command_dispatcher.py  dc_rules.txt  measure_command.py
recomendation_service/src/nlp/prolog/: command_dispatcher.py  measure_command.py  prolog_server_interface.py  tests.pro
recomendation_service/src/nlp/regex/: command_dispatcher.py  fsm_rules.py  measure_command_regex.py  phrases.py
recomendation_service/src/rec_system/: cli.py  data.py  domain.py  enums.py  filter.py  main.py  measure.py  recomendation_system.py
recomendation_service/src/rec_system/commands/filter_cmds/: add_filter_command.py  filter_value_eq_command.py  (+3 more)
recomendation_service/src/repositories/: conversation_context.py  conversation_context_repo.py  pirtures_repo.py  user.py  user_repo.py
recomendation_service/src/telegram_interface/: commands.py  config.py  main.py
(+44 files in other folders)
